src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/NonExistentRoutingResource1/InvalidNonExistentRoutingResource1.php
<?php

namespace Invalid\NonExistentRoutingResource1;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidNonExistentRoutingResource1 extends PluginBundle
{
    public function getRoutingResourcesPaths()
    {
        return 'wrong/path/file.yml';
    }
}